--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <title>Cook Book</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
